some extra small tweaks

--- a/index.html
+++ b/index.html
@@ -389,7 +389,10 @@
     <div class="row between-xs bottom-sm">
       <div class="col-xs-12 col-sm">
 
-        <h4 class="no-margin-top">We’re in The Rocks</h4>
+        <h4>
+          <span>We&rsquo;re in The Rocks </span>
+          <a href="https://goo.gl/maps/Ynt7t8KCuZv" title="Find Sitback on Google Maps" target="_blank"><small>&nbsp;[ map ]&nbsp;</small></a>
+        </h4>
         <p class="hug">
           <a href="https://www.google.com.au/maps/place/Sitback/@-33.8564434,151.2050245,17z/data=!3m1!4b1!4m5!3m4!1s0x6b12ae5ce22ca8bd:0x1d5bff2aa201ee00!8m2!3d-33.8564479!4d151.2072132" target="_blank">39-41 Lower Fort Street, Sydney NSW 2000 Australia</a>
           <br>
