--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="img/manifest.json">
     <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#d6252f">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#D6252F">
+    <script src="https://use.fontawesome.com/30f3ebe5d2.js"></script>
+
 <!--     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
 <!--     <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/app.css">
